--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-certifi==2023.5.7
+certifi==2023.7.22
 cftime==1.6.2
-contourpy==1.1.0
+colorama==0.4.6
 cycler==0.11.0
 fonttools==4.41.0
-kiwisolver==1.4.4
-matplotlib==3.7.2
 netCDF4==1.6.4
 numpy==1.25.1
 packaging==23.1
-Pillow==10.0.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 six==1.16.0
+tqdm==4.66.1
