--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 certifi==2023.7.22
 cftime==1.6.2
 colorama==0.4.6
+contourpy==1.2.0
 cycler==0.11.0
 fonttools==4.41.0
+kiwisolver==1.4.5
+matplotlib==3.8.2
 netCDF4==1.6.4
 numpy==1.25.1
 packaging==23.1
+Pillow==10.1.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
 six==1.16.0
