Plotting functions added

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,15 @@
 [MRR_PATHS]
 # JC UNI LAPTOP TESTS
-INPUT_PATH = C:/FirsData/MRR/MRR/MRRPro91
-OUTPUT_PATH = C:/Users/jonny/Desktop/diagplot
-
+# INPUT_PATH = C:/FirsData/MRR/MRR/MRRPro91
+# DIAG_PLOT_PATH = C:/Users/jonny/Desktop/diagplot
 # JC HOME PC TESTS
-# INPUT_PATH = C:/Users/jonny/Desktop/2023
-# OUTPUT_PATH = C:/Users/jonny/Desktop/2023/diagplot
+INPUT_PATH = C:/Users/jonny/Desktop/Data/MRR/202202/20220206
+DIAG_PLOT_PATH = C:/Users/jonny/Desktop/Data/MRR/diagplot
+
+[REALTIME_NC]
+INPUT_PATH = C:/Users/jonny/Desktop/Data/MRR/202202/20220206
+OUTPUT_PATH = C:/Users/jonny/Desktop/Data/MRR/realtime/current
+AVERAGE_INTERVAL_SECS = 60
+FIELD_NAMES = Z
+SCAN_ARCHIVE = False
+SCAN_MAX = 100
